--- a/analysis/simulation_summary.Rmd
+++ b/analysis/simulation_summary.Rmd
@@ -11,9 +11,14 @@ library(data.table)
 source("/project/xinhe/shengqian/cTWAS_simulation/code/simulation_help_functions.R")
 source("/project/xinhe/shengqian/cTWAS_simulation/code/summarize_basic_plots.R")
 source("/project/xinhe/shengqian/cTWAS_simulation/code/summarize_ctwas_plots.R")
+get_top_genes <- function(susieIf){
+  finemap_res <- readRDS(susieIf)$finemap_res
+  finemap_res <- finemap_res[finemap_res$type!="SNP",]
+  finemap_res <- finemap_res[!is.na(finemap_res$cs),]
+  finemap_res <- finemap_res[finemap_res$susie_pip>0.8,]
+  return(finemap_res$id)
+}
 ```
-
-
 ## Simulation 1: Four tissues expression trait
 Four expression traits from PredictDB are used in this study, which are Liver, Adipose, Lung and stomach. Liver and Adipose are selected as causal tissues, each with 3% PVE and 0.9% prior. Lung and stomach are non-causal tissues with 0% PVE.
 
@@ -114,6 +119,85 @@ gridExtra::grid.arrange(f1, f2, ncol = 2)
 f1 <- plot_gene_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
 f2 <- plot_gene_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
 gridExtra::grid.arrange(f1, f2, ncol = 2)
+```
+
+### Compare to other methods
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_four_tissues_expression/"
+runtag = "four_tissues"
+simutags <- paste(1, 1:5, sep = "-")
+phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".estimatedL.finemap_regions_res.RDS")
+susieIfs1 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight1.estimatedL.finemap_regions_res.RDS")
+susieIfs2 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight2.estimatedL.finemap_regions_res.RDS")
+susieIfs3 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight3.estimatedL.finemap_regions_res.RDS")
+susieIfs4 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight4.estimatedL.finemap_regions_res.RDS")
+zgenefs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".z_gene.RDS")
+plot_df <- data.frame()
+for(i in 1:5){
+  cau <- lapply(phenofs, function(x) {load(x);get_causal_id(phenores)})
+  causal_genes <- grep("\\|", cau[[i]], value = TRUE)
+  z_gene <- readRDS(zgenefs[i])
+  alpha <- 0.05
+  sig_thresh <- qnorm(1-(alpha/nrow(z_gene)/2), lower=T)
+  twas_genes <- z_gene$id[abs(z_gene$z)>sig_thresh]
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="TWAS",
+                              count=length(intersect(twas_genes,causal_genes)),
+                              ifcausal=T))
+  
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="TWAS",
+                              count=length(twas_genes)-length(intersect(twas_genes,causal_genes)),
+                              ifcausal=F))
+  
+  multi_cTWAS_genes <- get_top_genes(susieIfs[i])
+  
+  print(length(multi_cTWAS_genes))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="multi-cTWAS",
+                              count=length(intersect(multi_cTWAS_genes,causal_genes)),
+                              ifcausal=T))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="multi-cTWAS",
+                              count=length(multi_cTWAS_genes)-length(intersect(multi_cTWAS_genes,causal_genes)),
+                              ifcausal=F))
+  
+  single_cTWAS_genes <- c(get_top_genes(susieIfs1[i]),get_top_genes(susieIfs2[i]),get_top_genes(susieIfs3[i]),get_top_genes(susieIfs4[i]))
+  
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="single-cTWAS",
+                              count=length(intersect(single_cTWAS_genes,causal_genes)),
+                              ifcausal=T))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="single-cTWAS",
+                              count=length(single_cTWAS_genes)-length(intersect(single_cTWAS_genes,causal_genes)),
+                              ifcausal=F))
+}
+```
+
+```{r echo=FALSE}
+plot_df$method <- factor(plot_df$method, levels=c("TWAS", "multi-cTWAS", "single-cTWAS"))
+
+library(ggpubr)
+
+colset = c("#ebebeb", "#fb8072")
+
+ggbarplot(plot_df, 
+          x = "method", 
+          y = "count", 
+          add = "mean_se", 
+          fill = "ifcausal", 
+          legend = "none", 
+          ylab="Count", 
+          xlab="",
+          palette = colset) + grids(linetype = "dashed") + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
 ```
 
 ## Simulation 2: Three tissues expression and splicing trait
@@ -226,6 +310,88 @@ mapping_table <- readRDS("/project2/xinhe/shared_data/multigroup_ctwas/weights/m
 f1 <- plot_gene_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", mapping_table, main = "Estimated L")
 f2 <- plot_gene_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", mapping_table, main = "nonSNPpip")
 gridExtra::grid.arrange(f1, f2, ncol = 2)
+```
+
+### Compare to other methods
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_three_tissues_expression_splicing/"
+runtag = "E_S_three_tissues"
+simutags <- paste(1, 1:5, sep = "-")
+phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".estimatedL.finemap_regions_res.RDS")
+susieIfs1 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight1.estimatedL.finemap_regions_res.RDS")
+susieIfs2 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight2.estimatedL.finemap_regions_res.RDS")
+susieIfs3 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight3.estimatedL.finemap_regions_res.RDS")
+susieIfs4 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight4.estimatedL.finemap_regions_res.RDS")
+susieIfs5 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight5.estimatedL.finemap_regions_res.RDS")
+susieIfs6 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight6.estimatedL.finemap_regions_res.RDS")
+zgenefs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".z_gene.RDS")
+plot_df <- data.frame()
+for(i in 1:5){
+  cau <- lapply(phenofs, function(x) {load(x);get_causal_id(phenores)})
+  causal_genes <- grep("\\|", cau[[i]], value = TRUE)
+  z_gene <- readRDS(zgenefs[i])
+  alpha <- 0.05
+  sig_thresh <- qnorm(1-(alpha/nrow(z_gene)/2), lower=T)
+  twas_genes <- z_gene$id[abs(z_gene$z)>sig_thresh]
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="TWAS",
+                              count=length(intersect(twas_genes,causal_genes)),
+                              ifcausal=T))
+  
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="TWAS",
+                              count=length(twas_genes)-length(intersect(twas_genes,causal_genes)),
+                              ifcausal=F))
+  
+  multi_cTWAS_genes <- get_top_genes(susieIfs[i])
+  
+  print(length(multi_cTWAS_genes))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="multi-cTWAS",
+                              count=length(intersect(multi_cTWAS_genes,causal_genes)),
+                              ifcausal=T))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="multi-cTWAS",
+                              count=length(multi_cTWAS_genes)-length(intersect(multi_cTWAS_genes,causal_genes)),
+                              ifcausal=F))
+  
+  single_cTWAS_genes <- c(get_top_genes(susieIfs1[i]),get_top_genes(susieIfs2[i]),get_top_genes(susieIfs3[i]),
+                          get_top_genes(susieIfs4[i]),get_top_genes(susieIfs5[i]),get_top_genes(susieIfs6[i]))
+  
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="single-cTWAS",
+                              count=length(intersect(single_cTWAS_genes,causal_genes)),
+                              ifcausal=T))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="single-cTWAS",
+                              count=length(single_cTWAS_genes)-length(intersect(single_cTWAS_genes,causal_genes)),
+                              ifcausal=F))
+}
+```
+
+```{r echo=FALSE}
+plot_df$method <- factor(plot_df$method, levels=c("TWAS", "single-cTWAS", "multi-cTWAS",))
+
+library(ggpubr)
+
+colset = c("#ebebeb", "#fb8072")
+
+ggbarplot(plot_df, 
+          x = "method", 
+          y = "count", 
+          add = "mean_se", 
+          fill = "ifcausal", 
+          legend = "none", 
+          ylab="Count", 
+          xlab="",
+          palette = colset) + grids(linetype = "dashed") + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
 ```
 
 ## Simulation 3: Seven tissues correlated tissues expression trait
@@ -343,6 +509,88 @@ f2 <- plot_gene_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "n
 gridExtra::grid.arrange(f1, f2, ncol = 2)
 ```
 
+### Compare to other methods
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_seven_correlated_tissues_expression/"
+runtag = "7corr"
+simutags <- paste(1, 1:5, sep = "-")
+phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".estimatedL.finemap_regions_res.RDS")
+susieIfs1 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight1.estimatedL.finemap_regions_res.RDS")
+susieIfs2 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight2.estimatedL.finemap_regions_res.RDS")
+susieIfs3 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight3.estimatedL.finemap_regions_res.RDS")
+susieIfs4 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight4.estimatedL.finemap_regions_res.RDS")
+susieIfs5 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight5.estimatedL.finemap_regions_res.RDS")
+susieIfs6 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight6.estimatedL.finemap_regions_res.RDS")
+susieIfs7 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight7.estimatedL.finemap_regions_res.RDS")
+zgenefs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".z_gene.RDS")
+plot_df <- data.frame()
+for(i in 1:5){
+  cau <- lapply(phenofs, function(x) {load(x);get_causal_id(phenores)})
+  causal_genes <- grep("\\|", cau[[i]], value = TRUE)
+  z_gene <- readRDS(zgenefs[i])
+  alpha <- 0.05
+  sig_thresh <- qnorm(1-(alpha/nrow(z_gene)/2), lower=T)
+  twas_genes <- z_gene$id[abs(z_gene$z)>sig_thresh]
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="TWAS",
+                              count=length(intersect(twas_genes,causal_genes)),
+                              ifcausal=T))
+  
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="TWAS",
+                              count=length(twas_genes)-length(intersect(twas_genes,causal_genes)),
+                              ifcausal=F))
+  
+  multi_cTWAS_genes <- get_top_genes(susieIfs[i])
+  
+  print(length(multi_cTWAS_genes))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="multi-cTWAS",
+                              count=length(intersect(multi_cTWAS_genes,causal_genes)),
+                              ifcausal=T))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="multi-cTWAS",
+                              count=length(multi_cTWAS_genes)-length(intersect(multi_cTWAS_genes,causal_genes)),
+                              ifcausal=F))
+  
+  single_cTWAS_genes <- c(get_top_genes(susieIfs1[i]),get_top_genes(susieIfs2[i]),get_top_genes(susieIfs3[i]),
+                          get_top_genes(susieIfs4[i]),get_top_genes(susieIfs5[i]),get_top_genes(susieIfs6[i]),get_top_genes(susieIfs7[i]))
+  
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="single-cTWAS",
+                              count=length(intersect(single_cTWAS_genes,causal_genes)),
+                              ifcausal=T))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="single-cTWAS",
+                              count=length(single_cTWAS_genes)-length(intersect(single_cTWAS_genes,causal_genes)),
+                              ifcausal=F))
+}
+```
+
+```{r echo=FALSE}
+plot_df$method <- factor(plot_df$method, levels=c("TWAS", "single-cTWAS", "multi-cTWAS"))
+
+library(ggpubr)
+
+colset = c("#ebebeb", "#fb8072")
+
+ggbarplot(plot_df, 
+          x = "method", 
+          y = "count", 
+          add = "mean_se", 
+          fill = "ifcausal", 
+          legend = "none", 
+          ylab="Count", 
+          xlab="",
+          palette = colset) + grids(linetype = "dashed") + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
+```
 
 ## Simulation 4: seven tissues uncorrelated tissues expression trait
 A simulation of seven correlated tissues is conducted to evaluate cTWAS performance (parameter estimation, PIP calibration ...). Seven tissues used in this simulation are Artery Aorta, Spleen, Skin (not sun exposed suprapubic), Lung, Adipose Subcutaneous, Pancreas, Heart Artial Appendage. Pairwise correlation of gene expression are with 0.6-0.8. The first three tissues are set to be causal, each with 3% PVE, 0.9% $\pi$ for causal tissues, 0% PVE, 0% $\pi$ for non-causal tissues and 30% PVE, 2.5e-4 $\pi$ for SNP.
@@ -413,6 +661,7 @@ truth <- rbind(c(1,36),c(2,36),c(3,36),c(4,0),c(5,0),c(6,0),c(7,0))
 est <- rbind(cbind(1,y1),cbind(2,y2),cbind(3,y3),cbind(4,y4),cbind(5,y5),cbind(6,y6),cbind(7,y7))
 plot_par_7(truth,est,xlabels = c("Liver","Lung","Blood","Adipose","Artery","Heart","Stomach"), ylim=c(0,250),ylab= "Enrichment")
 ```
+
 ```{r, message=FALSE, warning=FALSE, echo=FALSE}
 plot_PIP_estimatedL <- function(results_dir, runtag,  simutags, LD_type, ...){
    phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
@@ -455,4 +704,87 @@ gridExtra::grid.arrange(f1, f2, ncol = 2)
 f1 <- plot_gene_PIP_estimatedL(results_dir, runtag, simutags, "UKBBLD", main = "Estimated L")
 f2 <- plot_gene_PIP_nonSNPpip(results_dir, runtag, simutags, "UKBBLD", main = "nonSNPpip")
 gridExtra::grid.arrange(f1, f2, ncol = 2)
+```
+
+### Compare to other methods
+```{r, fig.width= 8, fig.height= 4, echo=FALSE, message=FALSE, results='hide', warning=FALSE}
+results_dir <- "/project/xinhe/shengqian/cTWAS_simulation/simulation_seven_uncorrelated_tissues_expression/"
+runtag = "7uncorr"
+simutags <- paste(1, 1:5, sep = "-")
+phenofs <- paste0(results_dir, runtag, "_simu", simutags, "-pheno.Rd")
+susieIfs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".estimatedL.finemap_regions_res.RDS")
+susieIfs1 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight1.estimatedL.finemap_regions_res.RDS")
+susieIfs2 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight2.estimatedL.finemap_regions_res.RDS")
+susieIfs3 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight3.estimatedL.finemap_regions_res.RDS")
+susieIfs4 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight4.estimatedL.finemap_regions_res.RDS")
+susieIfs5 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight5.estimatedL.finemap_regions_res.RDS")
+susieIfs6 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight6.estimatedL.finemap_regions_res.RDS")
+susieIfs7 <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".weight7.estimatedL.finemap_regions_res.RDS")
+zgenefs <- paste0(results_dir, runtag, "_simu",simutags, "_UKBBLD", ".z_gene.RDS")
+plot_df <- data.frame()
+for(i in 1:5){
+  cau <- lapply(phenofs, function(x) {load(x);get_causal_id(phenores)})
+  causal_genes <- grep("\\|", cau[[i]], value = TRUE)
+  z_gene <- readRDS(zgenefs[i])
+  alpha <- 0.05
+  sig_thresh <- qnorm(1-(alpha/nrow(z_gene)/2), lower=T)
+  twas_genes <- z_gene$id[abs(z_gene$z)>sig_thresh]
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="TWAS",
+                              count=length(intersect(twas_genes,causal_genes)),
+                              ifcausal=T))
+  
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="TWAS",
+                              count=length(twas_genes)-length(intersect(twas_genes,causal_genes)),
+                              ifcausal=F))
+  
+  multi_cTWAS_genes <- get_top_genes(susieIfs[i])
+  
+  print(length(multi_cTWAS_genes))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="multi-cTWAS",
+                              count=length(intersect(multi_cTWAS_genes,causal_genes)),
+                              ifcausal=T))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="multi-cTWAS",
+                              count=length(multi_cTWAS_genes)-length(intersect(multi_cTWAS_genes,causal_genes)),
+                              ifcausal=F))
+  
+  single_cTWAS_genes <- c(get_top_genes(susieIfs1[i]),get_top_genes(susieIfs2[i]),get_top_genes(susieIfs3[i]),
+                          get_top_genes(susieIfs4[i]),get_top_genes(susieIfs5[i]),get_top_genes(susieIfs6[i]),get_top_genes(susieIfs7[i]))
+  
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="single-cTWAS",
+                              count=length(intersect(single_cTWAS_genes,causal_genes)),
+                              ifcausal=T))
+  plot_df <- rbind(plot_df,
+                   data.frame(simutag=i,
+                              method="single-cTWAS",
+                              count=length(single_cTWAS_genes)-length(intersect(single_cTWAS_genes,causal_genes)),
+                              ifcausal=F))
+}
+```
+
+```{r echo=FALSE}
+plot_df$method <- factor(plot_df$method, levels=c("TWAS", "single-cTWAS", "multi-cTWAS"))
+
+library(ggpubr)
+
+colset = c("#ebebeb", "#fb8072")
+
+ggbarplot(plot_df, 
+          x = "method", 
+          y = "count", 
+          add = "mean_se", 
+          fill = "ifcausal", 
+          legend = "none", 
+          ylab="Count", 
+          xlab="",
+          palette = colset) + grids(linetype = "dashed") + theme(axis.text.x = element_text(angle = 45, vjust = 1, hjust=1))
 ```
