--- a/analysis/simulation_summary.Rmd
+++ b/analysis/simulation_summary.Rmd
@@ -377,7 +377,7 @@ for(i in 1:5){
 ```
 
 ```{r echo=FALSE}
-plot_df$method <- factor(plot_df$method, levels=c("TWAS", "single-cTWAS", "multi-cTWAS",))
+plot_df$method <- factor(plot_df$method, levels=c("TWAS", "single-cTWAS", "multi-cTWAS"))
 
 library(ggpubr)
 
