--- a/analysis/simulation_summary.Rmd
+++ b/analysis/simulation_summary.Rmd
@@ -183,7 +183,7 @@ for(i in 1:5){
 ```
 
 ```{r echo=FALSE}
-plot_df$method <- factor(plot_df$method, levels=c("TWAS", "multi-cTWAS", "single-cTWAS"))
+plot_df$method <- factor(plot_df$method, levels=c("TWAS","single-cTWAS","multi-cTWAS"))
 
 library(ggpubr)
 
